--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "net-browserify",
+  "name": "net-browserify-ws",
   "version": "0.1.4",
   "description": "A port of the net module for the browser.",
   "author": "Emersion <contact@emersion.fr>",
